# tpofinder

./: CMakeLists.txt  LICENSE.TXT  ProjectHome.md  README.md
apps/: invert_homography.cpp  model_homography.cpp  sequence_homography.cpp  tpofind.cpp  webcam.cpp
data/adapter/: 001.yml  002.yml  003.yml  info.yml
data/blokus/: 001.yml  002.yml  003.yml  info.yml
data/stockholm/: 001.yml  002.yml  003.yml  info.yml
data/taco/: 001.yml  002.yml  003.yml  info.yml
data/tea/: 001.yml  002.yml  003.yml  info.yml
data/test/: alternative-taco-001.yml
example/: correspondences.yml
include/tpofinder/: configure.h.in  core.h  detect.h  feature.h  model.h  provide.h  truth.h  util.h  visualize.h
src/: detect.cpp  feature.cpp  model.cpp  provide.cpp  truth.cpp  util.cpp  visualize.cpp
test/: test.cpp  test.h  test_detect.cpp  test_feature.cpp  test_model.cpp  test_truth.cpp  test_util.cpp  test_visualize.cpp
